team page data modified

--- a/src/views/team-test.jade
+++ b/src/views/team-test.jade
@@ -91,268 +91,268 @@ block append vars
   -
     var members = [
       {
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "swapnil_chincholkar@2x.jpg",
+        name: "Swapnil Chincholkar",
+        githubId: "swapnilchincholkar"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "harish-patankar@2x.jpg",
+        name: "Harish Patankar",
+        githubId: "harishspatankar"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "suraj-jagtap@2x.jpg",
+        name: "Suraj Jagtap",
+        githubId: "SurajSJagtap"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "ajay-anarse@2x.jpg",
+        name: "Ajay Anarse",
+        githubId: "ajaysudhakaranarse"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "shirish@2x.jpg",
+        name: "Shirish Bankar",
+        githubId: "shirishbankar1"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "mohit-pawar@2x.jpg",
+        name: "Mohit Pawar",
+        githubId: "Mohit-Pawar"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "viraj-chavan@2x.jpg",
+        name: "Viraj Chavan",
+        githubId: "virajvchavan"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "geetanjali-kokate@2x.jpg",
+        name: "Geetanjali Kokate",
+        githubId: "Geetakokate"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "akshaykumar-kakade@2x.jpg",
+        name: "AkshayKumar Kakade",
+        githubId: "kakadeaa"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "yogesh-khater@2x.jpg",
+        name: "Yogesh Khater",
+        githubId: "yogeshjain999"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "pratik-shah@2x.jpg",
+        name: "Pratik Shah",
+        githubId: "pratik14"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "anuja-joshi@2x.jpg",
+        name: "Anuja Joshi",
+        githubId: "anuja-joshi"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "pramod-shinde@2x.jpg",
+        name: "Pramod Shinde",
+        githubId: "pramodshinde"
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "nikhil-pathak@2x.jpg",
+        name: "Nikhil Pathak",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "varsha-yadav@2x.jpg",
+        name: "Varsha Yadav",
+        githubId: "varshayadav"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "payal-bhalerao@2x.jpg",
+        name: "Payal Bhalerao",
+        githubId: "Payal13"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "anusha-bhat@2x.jpg",
+        name: "Anusha Bhat",
+        githubId: "A9u"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "sahil-bhatia@2x.jpg",
+        name: "Sahil Bhatia",
+        githubId: "sahilbhatia"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "krishnakant-kumar@2x.jpg",
+        name: "Krishnakant Kumar",
+        githubId: "Krishnakant-android"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "rahul-jadhav@2x.jpg",
+        name: "Rahul Jadhav",
+        githubId: "pain11"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "kiran-chaudhari@2x.jpg",
+        name: "Kiran Chaudhari",
+        githubId: "kirandc"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "shweta-kale@2x.jpg",
+        name: "Shweta Kale",
+        githubId: "Shwetakale"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "amol-udage@2x.jpg",
+        name: "Amol Udage",
+        githubId: "amoludage"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "chandrashekhar-sahu@2x.jpg",
+        name: "Chandrashekhar Sahu",
+        githubId: "shekhar12020"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "ganesh-sagare@2x.jpg",
+        name: "Ganesh Sagare",
+        githubId: "SagareGanesh"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "jyoti-sharma@2x.jpg",
+        name: "Jyoti Sharma",
+        githubId: "JyotiSharma1234"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "swati-jadhav@2x.jpg",
+        name: "Swati Jadhav",
+        githubId: "SwatiJadhav46"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "anil-kumar@2x.jpg",
+        name: "Anil Kumar",
+        githubId: "anilmaurya"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "pooja-mane@2x.jpg",
+        name: "Pooja Mane",
+        githubId: "pooja-mane"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "anuja-ware@2x.jpg",
+        name: "Anuja Ware",
+        githubId: "anujaware"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "amit-kumar@2x.jpg",
+        name: "Amit Kumar",
+        githubId: "amitk"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "bandana-pandey@2x.jpg",
+        name: "Bandana Pandey",
+        githubId: "BandanaPandey"
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "megha-brid@2x.jpg",
+        name: "Megha Brid",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "neha-vyas@2x.jpg",
+        name: "Neha Vyas",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "seema-jha@2x.jpg",
+        name: "Seema Jha",
+        githubId: "seemajha"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "ashvini-vibhute@2x.jpg",
+        name: "Ashvini Vibhute",
+        githubId: "ashviniv"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "kiran-deshmukh@2x.jpg",
+        name: "Kiran Deshmukh",
+        githubId: "kirandeshmukh"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "tejasvini-gambhire@2x.jpg",
+        name: "Tejasvini Gambhire",
+        githubId: "tejaswini-gambhire"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "meenakshi-kumari@2x.jpg",
+        name: "Meenakshi Kumari",
+        githubId: "meenakshikumari"
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "sai-pradhan-lohar@2x.jpg",
+        name: "Sai Pradhan",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "umesh-kanchan@2x.jpg",
+        name: "Umesh Kanchan",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "arvind-mahale@2x.jpg",
+        name: "Arvind Mahale",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "akshay-birajdar@2x.jpg",
+        name: "Akshay Birajdar",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "amit-dhadse@2x.jpg",
+        name: "Amit Dhadse",
+        githubId: "dhadseamit"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "anuj-verma.jpg",
+        name: "Anuj Verma",
+        githubId: "anuj-verma"
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "nikhil-mohadikar@2x.jpg",
+        name: "Nikhil Mohadikar",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "ninad-nehete@2x.jpg",
+        name: "Ninad Nehete",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "paritosh-botre@2x.jpg",
+        name: "Paritosh Botre",
+        githubId: "paritoshbotre"
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "pinky-rout@2x.jpg",
+        name: "Pinky Rout",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "priyanka-yadav@2x.jpg",
+        name: "Priyanka Yadav",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "raj-kamal-lashkari@2x.jpg",
+        name: "Raj Kamal Lashkari",
+        githubId: "rajlash"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "sambhaji-karad@2x.jpg",
+        name: "Sambhaji Karad",
+        githubId: "sambhaji213"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "tanya-saroha@2x.jpg",
+        name: "Tanya Saroha",
+        githubId: "tanya-saroha"
       },{
-        profilePic: "",
-        name: "",
-        githubId: ""
+        profilePic: "anurag.jpg",
+        name: "Anurag",
+        githubId: "apsc92"
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "bhagyashri.jpg",
+        name: "Bhagyashri",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "bhuvna.jpg",
+        name: "Bhuvna",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "kiran-mhale.jpg",
+        name: "Kiran Mhale",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "rahul-ojha.jpg",
+        name: "Rahul Ojha",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "rishul.jpg",
+        name: "Rishul",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "rohit.jpg",
+        name: "Rohit",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "rupali.jpg",
+        name: "Rupali",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "shailendra.jpg",
+        name: "Shailendra Kanherkar",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "shivam.jpg",
+        name: "Shivam",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "suhas-more.jpg",
+        name: "Suhas More",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "vaibhav-kale.jpg",
+        name: "Vaibhav Kale",
         githubId: ""
       },{
-        profilePic: "",
-        name: "",
+        profilePic: "vikas-khichar.jpg",
+        name: "Vikas Khichar",
         githubId: ""
       }
     ];
