--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -43,7 +43,7 @@ block content
               fill: url(#pattern);
               }
             pattern#pattern(preserveaspectratio='none', width='100%', height='100%', viewbox='0 0 1891 830')
-              image(width='1891', height='830', xlink:href='./images/services-banner-image.png')
+              image(width='1891', height='830', xlink:href=asset_url + 'images/services-banner-image.png')
           g#Group_942(data-name='Group 942', transform='translate(-93 -274)')
             rect#services-gear.cls-1(width='1245', height='546', transform='translate(93 274)')
             g#gear6.gear
@@ -124,7 +124,7 @@ block content
                 tspan(x='24.734', y='114') intervention.
         svg.services-banner-svg-sm(xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink', viewbox='0 0 471.626 1021')
           g#services-gear-mobile(transform='translate(-486 -2011)')
-            image#services-gear-sm(width='471', height='1021', transform='translate(486 2011)', xlink:href='./images/services-gear-sm.png')
+            image#services-gear-sm(width='471', height='1021', transform='translate(486 2011)', xlink:href=asset_url + 'images/services-gear-sm.png')
             g#gear-sm-6
               text#Rescue_Missions_sm.title(data-name='Rescue Missions', transform='translate(572.704 2864.404)')
                 tspan(x='23.041', y='18') Rescue 
