--- a/src/styles/pages/_team.scss
+++ b/src/styles/pages/_team.scss
@@ -149,6 +149,7 @@
   letter-spacing: rem(1px);
   padding: 0 rem(8px) 0 0;
   min-height: rem(34px);
+  @include flex(1 1 auto);
 
   @include media-breakpoint-down(sm){
     min-height: rem(24px);
@@ -157,6 +158,11 @@
   h5{
     font-size: rem(20px);
     margin-bottom: rem(4px);
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
 
     @include media-breakpoint-down(sm){
       font-size:rem(18px);
