updated meta tags

--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -8,8 +8,8 @@ html(lang="en")
       meta(charset="utf-8")
       meta(content="IE=edge", http-equiv="X-UA-Compatible")
       meta(content="width=device-width, initial-scale=1, user-scalable=0", name="viewport")
-      meta(content='Ruby on Rails, RoR, India, Rails development, open source, Web application development', name='keywords')
-      meta(content='Ruby on Rails experts in India and we believe that programming is an Art', name='description')
+      meta(content='Ruby on Rails, RoR, India, Rails development, React, ReactJS, Go, GoLang, Android, iOS, Mobile Development, Kotlin, Flutter, Swift, Machine Learning, AI, Artificial Intelligience, Cloud open source, Web application development', name='keywords')
+      meta(content='Technology Solution Providers To Distrupt Your Industry', name='description')
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
       link(rel='icon', href='favicon.ico')
