--- a/src/views/layouts/parallax-layout.jade
+++ b/src/views/layouts/parallax-layout.jade
@@ -9,7 +9,7 @@ html(lang="en")
       meta(content="IE=edge", http-equiv="X-UA-Compatible")
       meta(content="width=device-width, initial-scale=1, user-scalable=0", name="viewport")
       meta(content='Ruby on Rails, RoR, India, Rails development, React, ReactJS, Go, GoLang, Android, iOS, Mobile Development, Kotlin, Flutter, Swift, Machine Learning, AI, Artificial Intelligience, Cloud open source, Web application development', name='keywords')
-      meta(content='Technology Solution Providers To Distrupt Your Industry', name='description')
+      meta(content='Technology Solution Providers To Disrupt Your Industry', name='description')
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
       link(rel='icon', href='favicon.ico')
