--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -8,7 +8,7 @@ html(lang="en")
       meta(charset="utf-8")
       meta(content="IE=edge", http-equiv="X-UA-Compatible")
       meta(content="width=device-width, initial-scale=1, user-scalable=0", name="viewport")
-      meta(content='Ruby on Rails, RoR, India, Rails development, React, ReactJS, Go, GoLang, Android, iOS, Mobile Development, Kotlin, Flutter, Swift, Machine Learning, AI, Artificial Intelligience, Cloud open source, Web application development', name='keywords')
+      meta(content='Ruby on Rails, RoR, India, Rails development, React, ReactJS, Go, GoLang, Android, iOS, Mobile Development, Kotlin, Flutter, Swift, Machine Learning, AI, Artificial Intelligence, Cloud open source, Web application development', name='keywords')
       meta(content='Technology Solution Providers To Disrupt Your Industry', name='description')
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
