added meta tags for sharable link

--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -10,6 +10,7 @@ html(lang="en")
       meta(content="width=device-width, initial-scale=1, user-scalable=0", name="viewport")
       meta(content='Ruby on Rails, RoR, India, Rails development, React, ReactJS, Go, GoLang, Android, iOS, Mobile Development, Kotlin, Flutter, Swift, Machine Learning, AI, Artificial Intelligence, Cloud open source, Web application development', name='keywords')
       meta(content='Technology Solution Providers To Disrupt Your Industry', name='description')
+      meta(property='og:image', content='http://new.joshsoftware.com:8080/images/josh-logo.png')
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
       link(rel='icon', href='favicon.ico')
