--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -10,7 +10,10 @@ html(lang="en")
       meta(content="width=device-width, initial-scale=1, user-scalable=0", name="viewport")
       meta(content='Ruby on Rails, RoR, India, Rails development, React, ReactJS, Go, GoLang, Android, iOS, Mobile Development, Kotlin, Flutter, Swift, Machine Learning, AI, Artificial Intelligence, Cloud open source, Web application development', name='keywords')
       meta(content='Technology Solution Providers To Disrupt Your Industry', name='description')
-      meta(property='og:image', content='http://new.joshsoftware.com:8080/images/joshlogo.png')
+      meta(property='og:image', content='https://secure.gravatar.com/blavatar/769a0cc02df5d3f8e960688f2ae34cf4?s=200&ts=1551882735')
+      meta(property='og:image:width', content='200')
+      meta(property='og:image:height', content='200')
+
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
       link(rel='icon', href='favicon.ico')
