Added github id's for some users

--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -261,7 +261,7 @@ block append vars
       },{
         profilePic: "ninad-nehete@2x.jpg",
         name: "Ninad Nehete",
-        githubId: ""
+        githubId: "ninadnehete"
       },{
         profilePic: "paritosh-botre@2x.jpg",
         name: "Paritosh Botre",
@@ -293,19 +293,19 @@ block append vars
       },{
         profilePic: "bhagyashri.jpg",
         name: "Bhagyashri",
-        githubId: ""
+        githubId: "bhagyashriSawkar"
       },{
         profilePic: "bhuvna.jpg",
         name: "Bhuvna",
-        githubId: ""
+        githubId: "pegasusflyhigh"
       },{
         profilePic: "kiran-mhale.jpg",
         name: "Kiran Mhale",
-        githubId: ""
+        githubId: "kiranmahale"
       },{
         profilePic: "rahul-ojha.jpg",
         name: "Rahul Ojha",
-        githubId: ""
+        githubId: "aaark"
       },{
         profilePic: "rishul.jpg",
         name: "Rishul",
@@ -325,11 +325,11 @@ block append vars
       },{
         profilePic: "shivam.jpg",
         name: "Shivam",
-        githubId: ""
+        githubId: "shivamkumarsingh"
       },{
         profilePic: "suhas-more.jpg",
         name: "Suhas More",
-        githubId: ""
+        githubId: "suhas010"
       },{
         profilePic: "vaibhav-kale.jpg",
         name: "Vaibhav Kale",
