--- a/src/views/inc/footer.jade
+++ b/src/views/inc/footer.jade
@@ -24,7 +24,7 @@ footer.josh-footer
       .policy-wrap
         p.text-policy
           a(href="https://s3.ap-south-1.amazonaws.com/josh-website/PrivacyPolicyWebsite.pdf", target='_blank') View Privacy Policy
-        p.text-copyright Copyright © 2007 - 2018 Josh Software Pvt. Ltd.
+        p.text-copyright Copyright © 2007 - #{new Date().getFullYear()} Josh Software Pvt. Ltd.
       .connect-wrap
         p Connect with us
         .social-media-links
