--- a/src/views/inc/footer-home.jade
+++ b/src/views/inc/footer-home.jade
@@ -48,4 +48,4 @@ footer.josh-footer
         a.nav-link(href="contact-us.html") Contact Us
     p.text-policy.text-center.mb-3
       a(href="https://s3.ap-south-1.amazonaws.com/josh-website/PrivacyPolicyWebsite.pdf", target='_blank') View Privacy Policy
-    p.text-copyright.text-center.mb-3 Copyright © 2007 - 2018 Josh Software Pvt. Ltd.
+    p.text-copyright.text-center.mb-3 Copyright © 2007 - #{new Date().getFullYear()} Josh Software Pvt. Ltd.
