Added career page redirection

--- a/src/views/about-us.jade
+++ b/src/views/about-us.jade
@@ -20,7 +20,7 @@ block content
             img.img-fluid.img-mobile(src=asset_url + "images/group-photos-mobile.png" alt="Josh Software Team")
             .btn-wrap
               a.btn.btn-white(href="team.html") Meet Our Team
-              a.btn.btn-outline-white(href="career.html") Job Openings
+              a.btn.btn-outline-white(href="http://careers.joshsoftware.com/") Job Openings
         .col-lg-6.col-md-12
           .img-wrap
             img.img-fluid(src=asset_url + "images/group-photos-desktop.png" alt="Josh Software Team")
