--- a/src/views/inc/footer-home.jade
+++ b/src/views/inc/footer-home.jade
@@ -44,7 +44,7 @@ footer.josh-footer
         a.nav-link(href="about-us.html#news") In News
         a.nav-link(href="team.html") Our Team
         a.nav-link(href="https://blog.joshsoftware.com/", target="_blank") Blog
-        a.nav-link(href="career.html") Career
+        a.nav-link(href="http://careers.joshsoftware.com/") Career
         a.nav-link(href="contact-us.html") Contact Us
     p.text-policy.text-center.mb-3
       a(href="https://s3.ap-south-1.amazonaws.com/josh-website/PrivacyPolicyWebsite.pdf", target='_blank') View Privacy Policy
