--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -83,7 +83,7 @@ block content
               iframe(src='https://www.youtube.com/embed/e_7qhUMJJ8k?rel=0', allow='autoplay; encrypted-media', allowfullscreen='')
       .btn-wrap
         a.btn.btn-gray(href="team.html") Our Team
-        a.btn.btn-outline-gray(href="career.html") Career
+        a.btn.btn-outline-gray(href="http://careers.joshsoftware.com/") Career
 
 block append scripts
   script.
