--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -377,7 +377,7 @@ block content
 
       .btn-wrap
         a.btn.btn-gray(href="about-us.html") About Us
-        a.btn.btn-outline-gray(href="career.html") Career
+        a.btn.btn-outline-gray(href="http://careers.joshsoftware.com/") Career
 
 block append scripts
   script.
