--- a/src/views/inc/footer.jade
+++ b/src/views/inc/footer.jade
@@ -18,7 +18,7 @@ footer.josh-footer
         a.nav-link(href="about-us.html#news") In News
         a.nav-link(href="team.html") Our Team
         a.nav-link(href="https://blog.joshsoftware.com/", target="_blank") Blog
-        a.nav-link(href="career.html") Career
+        a.nav-link(href="http://careers.joshsoftware.com/") Career
         a.nav-link(href="contact-us.html") Contact Us
     .social-links-wrap
       .policy-wrap
