Removed few profiles

--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -22,7 +22,7 @@ block append vars
       },
       {
         profilePic: "core-vaibhavi@2x.jpg",
-        name: "Vaibhavi",
+        name: "Vaibhavi Rege",
         designation: "Director",
         linkedinId: "",
         githubId: ""
@@ -163,10 +163,6 @@ block append vars
         name: "Rahul Jadhav",
         githubId: "pain11"
       },{
-        profilePic: "kiran-chaudhari@2x.jpg",
-        name: "Kiran Chaudhari",
-        githubId: "kirandc"
-      },{
         profilePic: "shweta-kale@2x.jpg",
         name: "Shweta Kale",
         githubId: "Shwetakale"
@@ -182,10 +178,6 @@ block append vars
         profilePic: "ganesh-sagare@2x.jpg",
         name: "Ganesh Sagare",
         githubId: "SagareGanesh"
-      },{
-        profilePic: "jyoti-sharma@2x.jpg",
-        name: "Jyoti Sharma",
-        githubId: "JyotiSharma1234"
       },{
         profilePic: "swati-jadhav@2x.jpg",
         name: "Swati Jadhav",
@@ -278,10 +270,6 @@ block append vars
         profilePic: "raj-kamal-lashkari@2x.jpg",
         name: "Raj Kamal Lashkari",
         githubId: "rajlash"
-      },{
-        profilePic: "sambhaji-karad@2x.jpg",
-        name: "Sambhaji Karad",
-        githubId: "sambhaji213"
       },{
         profilePic: "tanya-saroha@2x.jpg",
         name: "Tanya Saroha",
