--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -29,7 +29,7 @@ block append vars
       },
       {
         profilePic: "core-sundari@2x.jpg",
-        name: "Sundari",
+        name: "Maragatha Sundari",
         designation: "Director",
         linkedinId: "",
         githubId: ""
