--- a/src/views/team.jade
+++ b/src/views/team.jade
@@ -44,14 +44,14 @@ block append vars
       {
         profilePic: "core-sameer@2x.jpg",
         name: "Sameer Tilak",
-        designation: "Head of Engineering",
+        designation: "VP of Engineering",
         linkedinId: "sameer-tilak-425a825",
         githubId: "Sameer-Tilak"
       },
       {
         profilePic: "core_sachin@2x.jpg",
         name: "Sachin Shintre",
-        designation: "Head of Engineering",
+        designation: "VP of Engineering",
         linkedinId: "shintre",
         githubId: "shintre"
       },
