updated para in industries section

--- a/src/views/industries.jade
+++ b/src/views/industries.jade
@@ -39,7 +39,7 @@ block content
           .overlay
             span Banking & Finance
       h1.section-heading Industries
-      p.para Our expertise lies in open source frameworks, scalable architecture and sustainable technology applications. It also includes new age technologies such as data science (statistical, analytical and predictive) and processes to build disruptive tech solutions
+      p.para Disruption is not the future, it is the present. In an ever evolving technological landscape, it is imperative for innovation to win over the mundane, and that's exactly what we aim to achieve. Over the last decade, Josh software has successfully undertaken multiple digital transformation journeys for its clients, and built integrated solutions on the back of new age technologies to take disruption to the next level. 
       a.scroll-down.text-white(href="#industries")
         i.icon-angle-double-down
   section#industries.section-industries.section-content
