--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -197,7 +197,7 @@ block content
               img.img-fluid(src=asset_url + "images/clogo-gojek.jpg", alt="GO JEK")
           li
             a(href="http://www.dealsignal.com/",target="_blank")
-              img.img-fluid(src=asset_url + "images/clogo-dealsignal.jpg", alt="DealSignal")
+              img.img-fluid(src=asset_url + "images/bizunbound.png", alt="BizUnBound")
           li
             a(href="http://brandscope.com.au/",target="_blank")
               img.img-fluid(src=asset_url + "images/clogo-brandscope.jpg", alt="Brandscope")
@@ -218,10 +218,10 @@ block content
               img.img-fluid(src=asset_url + "images/clogo-ffd.jpg", alt="Freedom From Diabetes")
           li
             a(href="http://www.synergydesignsolutions.com.sg/",target="_blank")
-              img.img-fluid(src=asset_url + "images/clogo-synergy.jpg", alt="Synergy Design Solutions")
+              img.img-fluid(src=asset_url + "images/firstcircle.png", alt="First Circle")
           li
             a(href="https://next.merchdirect.com/",target="_blank")
-              img.img-fluid(src=asset_url + "images/clogo-mdny.jpg", alt="Merch Direct")
+              img.img-fluid(src=asset_url + "images/circlelife.png", alt="Circle Life")
           li
             a(href="https://fundamentor.com/",target="_blank")
               img.img-fluid(src=asset_url + "images/clogo-fundamentor.jpg", alt="Fundamentor")
